# audia

./: Cargo.toml  LICENSE  README.md  preferences.ron
resources/stylesheets/: theme.css
resources/translations/en-GB/: strings.ftl
resources/translations/en-US/: strings.ftl  strrings.ftl
src/: main.rs  messages.rs  oauth.rs  playback.rs  spotify.rs  storage.rs  worker.rs
src/playback/: bootstrap.rs  control.rs  mod.rs  progress.rs
src/spotify/: albums.rs  artists.rs  auth.rs  mod.rs  playback.rs  playlists.rs  profile.rs  search.rs  types.rs
src/ui/: event_handling.rs  mod.rs  model_data.rs
src/ui/data/: album_state.rs  artist_state.rs  center_state.rs  mod.rs  oauth_state.rs  panel_state.rs  playback_state.rs  playlists_state.rs  preferences_data.rs  queue_panel_state.rs  right_panel_state.rs  search_state.rs
src/ui/dialogs/: create_playlist.rs  login_modal.rs  mod.rs  playlist_context_menu.rs  preferences.rs  rename_playlist.rs
src/ui/events/: album.rs  artist.rs  mod.rs  navigation.rs  oauth.rs  playback.rs  playlists.rs  search.rs  system.rs
src/ui/panels/: album_tracks.rs  artist.rs  header.rs  mod.rs  playback_controls.rs  playlist_tracks.rs  playlists.rs  queue.rs  recently_played.rs  search_results.rs
src/worker/: albums.rs  artists.rs  auth.rs  mod.rs  oauth.rs  playback.rs  playlists.rs  search.rs
